--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(mavg)
 export(mrep)
 export(nanova)
 export(npcomp)
+export(nspcortest)
 export(pdiag)
 export(plot_insets)
 export(test_covariance)
