--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(nanova)
 export(npcomp)
 export(nspcortest)
 export(pdiag)
+export(plot_classif)
 export(plot_insets)
 export(test_covariance)
 export(test_multinorm)
